styles/grundgeruest.less
// LAYOUT;

html, body {
	margin: 0;
	padding: 0;
}

* {
  font-family: 'dshStandard', sans-serif;
	font-size: @hauptSchriftgroesse;
	font-weight: normal;
	padding: 0px;
	margin: 0px;
	list-style-type: none;
	line-height: 1.2em;
	text-decoration: none;
	box-sizing: border-box;
}

#dshNetzcheck {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  font-size: 10px;
  padding: 2px 5px;
  text-align: center;
  z-index: 1000;
  transition: height 1s ease-in-out, background-color 250ms ease-in-out, color 250ms ease-in-out;
  height: 16px;
}

#dshNetzcheck p {
  font-size: 20px;
  font-weight: bold;
  line-height: 1;
  margin-top: 10px;
  display: block;
}

#dshNetzcheck.offline {
  height: 100px;
}

.dshSeiteH #dshNetzcheck.offline {
  height: 150px;
}
// FARBEN;

body {
	background-color: @koerperhintergrund;
}

#dshHauptteilO {
	background-color: @seitenhintergrund;
}

#dshNetzcheck {
  background-color: rgba(51,153,204,1);
  color: @schriftfarbeNegativ;
}

#dshNetzcheck.offline {
  background-color: @fehlerHintergrund;
  color: @fehlerSchrift;
}

// LAYOUT;

#dshHauptteilI {
	width: 100%;
	max-width: @seitenbreite;
	margin: 0px auto;
	padding: 10px 0px 10px 0px;
	position: relative;
}

// FARBEN;

.dshVollbild {
	background-color: @seitenhintergrund;
}

// LAYOUT;

.dshVollbild {
	position: relative;
}

#dshHauptteilI {
	width: @seitenbreite;
	margin: 0px auto;
}

.dshSeiteT #dshHauptteilI,
.dshSeiteH #dshHauptteilI {
	max-width: @seitenbreite !important;
  width: auto;
	margin: 0px auto;
}

#dshBlende {
  position: fixed;
  left: 0px;
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: 1000;
  overflow-y: scroll;
  display: none;
}

#dshBlendeI {
  width: @seitenbreite;
	margin: 50px auto;
}
#dshBlendeI>.dshUiFenster {
  box-shadow: 2px 2px 4px 1px rgba(33, 33, 33, 0.4);
}

.dshSeiteT #dshBlendeI,
.dshSeiteH #dshBlendeI {
	max-width: @seitenbreite !important;
  width: auto;
	margin: 50px auto;
  padding: 0 10px;
}

// FARBEN;

#dshBlende {
  background-color: @hinweiseHintergrund;
}

